package decorator;

/**
 * 美式咖啡
 */
public class Cafe extends Coffee {
    public Cafe() {
        setPrice(10.0f);
        setName("美式咖啡");
    }
}
