package decorator;

/**
 * 焦糖咖啡
 */
public class Caramel extends Coffee{
    public Caramel() {
        setPrice(15.0f);
        setName("焦糖咖啡");
    }
}
